--- a/myref.bib
+++ b/myref.bib
@@ -813,7 +813,6 @@ month={Feb},}
   booktitle = {2nd International Conference on Learning Representations, {ICLR} 2014,
                Banff, AB, Canada, April 14-16, 2014, Conference Track Proceedings},
   year      = {2014},
-  crossref  = {DBLP:conf/iclr/2014},
   url       = {http://arxiv.org/abs/1312.6114},
   timestamp = {Thu, 04 Apr 2019 13:20:07 +0200},
   biburl    = {https://dblp.org/rec/bib/journals/corr/KingmaW13},
@@ -827,4 +826,136 @@ month={Feb},}
   Number                   = {1},
   Pages                    = {17--60},
   Volume                   = {5}
+}
+@book{James:2014:ISL:2517747,
+ author = {James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+ title = {An Introduction to Statistical Learning: With Applications in R},
+ year = {2014},
+ isbn = {1461471370, 9781461471370},
+ publisher = {Springer Publishing Company, Incorporated},
+} 
+@inproceedings{Minka:2001:EPA:647235.720257,
+ author = {Minka, Thomas P.},
+ title = {Expectation Propagation for Approximate Bayesian Inference},
+ booktitle = {Proceedings of the 17th Conference in Uncertainty in Artificial Intelligence},
+ series = {UAI '01},
+ year = {2001},
+ isbn = {1-55860-800-1},
+ pages = {362--369},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=647235.720257},
+ acmid = {720257},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+} 
+@article{Ihler:2005:LBP:1046920.1088703,
+ author = {Ihler, Alexander T. and Fischer III, John W. and Willsky, Alan S.},
+ title = {Loopy Belief Propagation: Convergence and Effects of Message Errors},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {12/1/2005},
+ volume = {6},
+ month = dec,
+ year = {2005},
+ issn = {1532-4435},
+ pages = {905--936},
+ numpages = {32},
+ url = {http://dl.acm.org/citation.cfm?id=1046920.1088703},
+ acmid = {1088703},
+ publisher = {JMLR.org},
+} 
+@inproceedings{Yedidia:2000:GBP:3008751.3008848,
+ author = {Yedidia, Jonathan S. and Freeman, William T. and Weiss, Yair},
+ title = {Generalized Belief Propagation},
+ booktitle = {Proceedings of the 13th International Conference on Neural Information Processing Systems},
+ series = {NIPS'00},
+ year = {2000},
+ location = {Denver, CO},
+ pages = {668--674},
+ numpages = {7},
+ url = {http://dl.acm.org/citation.cfm?id=3008751.3008848},
+ acmid = {3008848},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+@inproceedings{Wiegerinck:2002:FBP:2968618.2968673,
+ author = {Wiegerinck, Wim and Heskes, Tom},
+ title = {Fractional Belief Propagation},
+ booktitle = {Proceedings of the 15th International Conference on Neural Information Processing Systems},
+ series = {NIPS'02},
+ year = {2002},
+ pages = {438--445},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=2968618.2968673},
+ acmid = {2968673},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+@phdthesis{Minka:2001:FAA:935427,
+ author = {Minka, Thomas P.},
+ title = {A Family of Algorithms for Approximate Bayesian Inference},
+ year = {2001},
+ note = {AAI0803033},
+ publisher = {Massachusetts Institute of Technology},
+ address = {Cambridge, MA, USA},
+} 
+@incollection{yingzhen2015sep,
+title = {Stochastic Expectation Propagation},
+author = {Li, Yingzhen and Hern\'{a}ndez-Lobato, Jos\'{e} Miguel and Turner, Richard E},
+booktitle = {Advances in Neural Information Processing Systems 28},
+editor = {C. Cortes and N. D. Lawrence and D. D. Lee and M. Sugiyama and R. Garnett},
+pages = {2323--2331},
+year = {2015},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/5760-stochastic-expectation-propagation.pdf}
+}
+@inproceedings{Lin:2015:DLM:2969239.2969280,
+ author = {Lin, Guosheng and Shen, Chunhua and Reid, Ian and Hengel, Anton van den},
+ title = {Deeply Learning the Messages in Message Passing Inference},
+ booktitle = {Proceedings of the 28th International Conference on Neural Information Processing Systems - Volume 1},
+ series = {NIPS'15},
+ year = {2015},
+ location = {Montreal, Canada},
+ pages = {361--369},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=2969239.2969280},
+ acmid = {2969280},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+}
+@article{yoon2019inferenceGraph,
+  author    = {KiJung Yoon and
+               Renjie Liao and
+               Yuwen Xiong and
+               Lisa Zhang and
+               Ethan Fetaya and
+               Raquel Urtasun and
+               Richard S. Zemel and
+               Xaq Pitkow},
+  title     = {Inference in Probabilistic Graphical Models by Graph Neural Networks},
+  journal   = {CoRR},
+  volume    = {abs/1803.07710},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1803.07710},
+  archivePrefix = {arXiv},
+  eprint    = {1803.07710},
+  timestamp = {Mon, 13 Aug 2018 16:48:16 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1803-07710},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{du2017convergenceBP,
+ author = {Du, Jian and Ma, Shaodan and Wu, Yik-Chung and Kar, Soummya and Moura, Jos{\'e} M. F.},
+ title = {Convergence Analysis of Distributed Inference with Vector-valued Gaussian Belief Propagation},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {January 2017},
+ volume = {18},
+ number = {1},
+ month = jan,
+ year = {2017},
+ issn = {1532-4435},
+ pages = {6302--6339},
+ numpages = {38},
+ url = {http://dl.acm.org/citation.cfm?id=3122009.3242029},
+ acmid = {3242029},
+ publisher = {JMLR.org},
+ keywords = {Markov random field, graphical model, large-scale networks, linear gaussian model, walk-summability},
 }
