submit to globalSIP

--- a/myref.bib
+++ b/myref.bib
@@ -959,3 +959,21 @@ url = {http://papers.nips.cc/paper/5760-stochastic-expectation-propagation.pdf}
  publisher = {JMLR.org},
  keywords = {Markov random field, graphical model, large-scale networks, linear gaussian model, walk-summability},
 }
+@article{Opper:2000:GPC:1121900.1121911,
+ author = {Opper, Manfred and Winther, Ole},
+ title = {Gaussian Processes for Classification: Mean-Field Algorithms},
+ journal = {Neural Comput.},
+ issue_date = {November 2000},
+ volume = {12},
+ number = {11},
+ month = nov,
+ year = {2000},
+ issn = {0899-7667},
+ pages = {2655--2684},
+ numpages = {30},
+ url = {http://dx.doi.org/10.1162/089976600300014881},
+ doi = {10.1162/089976600300014881},
+ acmid = {1121911},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
