--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@
   \IEEEauthorblockA {$^{1}$ KTH Royal Institute of Technology, Stockholm, Sweden. }
   \IEEEauthorblockA {$^{2}$ Huawei Technologies Sweden AB, Stockholm, Sweden.}
   \IEEEauthorblockA{
-    e-mail: \{doli, lkra, sach\}@kth.se, \{jinliang.huang, nima.najari.moghadam1\}@huawei.com}
+    e-mail: \{doli, lkra, sach\}@kth.se, \{nima.najari.moghadam1, jinliang.huang\}@huawei.com}
 }
 
 
@@ -89,17 +89,17 @@ Bayesian inference provides a general mathematical framework for many learning t
 Specifically, statistic properties of a hidden variable $\bm{x} = \{x_1,\dots,x_N\}$ are of common interests in Bayesian inference. Practical interests usually include finding joint probability $p(\bm{x})$, marginal probability $p_i(x_i)$, the most probable state $\argmax_{\bm{x}} p(\bm{x})$. It can be extended to maximum a posterior (MAP) inference when it is conditional on some observation ($\argmax_{\bm{x}}p(\bm{x} | \cdot)$). Direct inference from $p(\bm{x})$ may be difficult computationally or technically. For instance, in the MAP inference problem, it could be the case that the gradient or subgradient of $p(\bm{x})$ may not exist and it is computationally prohibitive to search $\bm{x}$'s whole feasible space.
 
 
-Probabilistic graphical models as structured graphs provide a framework for modeling the dependency between random variables. Belief propagation (BP) is a general message-passing algorithm for performing inference on graphical models. The intuition of BP is exchange of belief (statistical information) between neighboring nodes \cite{Bishop:2006:PRM:1162264}. When belief exchange converges, inference can be done by using the converged belief in graphical models. BP can sovle inference problems exactly when the graphical model representation of $p(\bm{x})$ is loop-free or tree-structured \cite{kschischang2001factor_graph}.
+Probabilistic graphical models as structured graphs provide a framework for modeling the dependency between random variables. Belief propagation (BP) is a general message-passing algorithm for performing inference on graphical models. The intuition of BP is exchange of belief (statistical information) between neighboring nodes \cite{Bishop:2006:PRM:1162264}. When belief exchange converges, inference can be done by using the converged belief in graphical models. BP can solve inference problems exactly when the graphical model representation of $p(\bm{x})$ is loop-free or tree-structured \cite{kschischang2001factor_graph}.
 When there are loops or circles in graphical models, BP is still a practical method to do inference approximately (loopy BP) by running it as if there is no loop. But its performance could be deteriorated significantly. In the loopy case,
 there are attempts to study convergence properties of BP in special cases \cite{Ihler:2005:LBP:1046920.1088703, du2017convergenceBP}, but (loopy) BP may not converge in general.
 
-Apart from the practical performance issues of BP in loopy graphs, the understanding of it is also limited. \cite{Yedidia:2000:GBP:3008751.3008848} shows that BP in loopy graphs approaches to a stationary point of an approximate free energy, the Bethe free energy in statistical physics. Based on this understanding, variants of BP are derived to improve BP. For instance, fractional BP in \cite{Wiegerinck:2002:FBP:2968618.2968673} applies a correction coefficient to each factor, and generalized BP \cite{Yedidia:2000:GBP:3008751.3008848} propagates belief between different regions of a graph. Another track was started by Minka's expectation propagation (EP) \cite{Minka:2001:EPA:647235.720257, Minka:2001:FAA:935427}. In EP, a simpler factorized distribution defined in exponential distribution family is used to approximate the original complex distribution, and an intuitive factor-wise refinement procedure is used to find such an approximate distribution. The method has an intuition of minimizing a localized Kullback-Leibler (KL) divergence. This is discussed further in \cite{divergence-measures-and-message-passing} and it shows an unifying view of message passing algorithms. Following work stochastic EP \cite{yingzhen2015sep} explores its variant method for applications to large dataset.
+Apart from the practical performance issues of BP in loopy graphs, the understanding of it is also limited. \cite{Yedidia:2000:GBP:3008751.3008848} shows that BP in loopy graphs approaches to a stationary point of an approximate free energy, the Bethe free energy in statistical physics. Based on this understanding, variants of BP are derived to improve BP. For instance, fractional BP in \cite{Wiegerinck:2002:FBP:2968618.2968673} applies a correction coefficient to each factor, and generalized BP \cite{Yedidia:2000:GBP:3008751.3008848} propagates belief between different regions of a graph. Another track is expectation propagation (EP), introduced by Opper and Winther \cite{Opper:2000:GPC:1121900.1121911} and Minka \cite{Minka:2001:EPA:647235.720257, Minka:2001:FAA:935427}. In EP, a simpler factorized distribution defined in exponential distribution family is used to approximate the original complex distribution, and an intuitive factor-wise refinement procedure is used to find such an approximate distribution. The method has an intuition of minimizing a localized Kullback-Leibler (KL) divergence. This is discussed further in \cite{divergence-measures-and-message-passing} and it shows an unifying view of message passing algorithms. Following work stochastic EP \cite{yingzhen2015sep} explores its variant method for applications to large dataset.
 
-In this work, we take the path of Minka's variational methods to improve and gain better understanding of BP in loopy graphs.
-We define a surrogate distribution $q(\bm{x})$ first. $q(\bm{x})$ is assumed to be fully factorized and each factor of $q(\bm{x})$ represents a massage in factor graph representation of original distribution $p(\bm{x})$. Fully factorization is the only requirement to $q(\bm{x})$. Then we define a message passing rule that is derived by minimizing a localized $\alpha$-divergence. This is factor-wise refinement of $q(\bm{x})$ iteratively. We refer to the obtained algorithm by $\alpha$-BP. The merits of $\alpha$ are as follows:
+In this work, we take the path of Minka's variational methods to improve BP and also to gain better understanding of BP in loopy graphs.
+We define a surrogate distribution $q(\bm{x})$ first. $q(\bm{x})$ is assumed to be fully factorized and each factor of $q(\bm{x})$ represents a message in the factor graph representation of the original distribution $p(\bm{x})$. Fully factorization is the only requirement to $q(\bm{x})$. Then we define a message passing rule that is derived by minimizing a localized $\alpha$-divergence. This is factor-wise refinement of $q(\bm{x})$ iteratively. We refer to the obtained algorithm by $\alpha$-BP. The merits of $\alpha$ are as follows:
 \begin{itemize}
 \item[a.]{$\alpha$-BP has clear intuition as localized minimization of $\alpha$-divergence between original distribution $p$ and surrogate distribution $q$.}
-\item[b.]{$\alpha$-BP generalizes the standard BP, since the message rule of BP is special case of $\alpha$-BP.}
+\item[b.]{$\alpha$-BP generalizes the standard BP, since the message rule of BP is a special case of $\alpha$-BP.}
 \item[c.]{$\alpha$}-BP could outperform BP significantly even in full-connected graphs while still maintaining simplicity of BP for inference. 
 \end{itemize}
 
@@ -144,7 +144,7 @@ We define a surrogate distribution $q(\bm{x})$ first. $q(\bm{x})$ is assumed to 
 In this section, we provide the preliminaries that are needed in this paper. We introduce the $\alpha$-divergence and a graphical model that we are going to use to explain $\alpha$-BP.
 
 \subsection{Divergence Measures}
-As explained in \autoref{sec:introduction}, we are going to minimize $\alpha$-divergence between $p$ and $q$, which is defined as follows according to \cite{Zhu95informationgeometric}\cite{divergence-measures-and-message-passing}: \\
+As explained in Section~\ref{sec:introduction}, we are going to minimize $\alpha$-divergence between $p$ and $q$, which is defined as follows according to \cite{Zhu95informationgeometric}\cite{divergence-measures-and-message-passing}: \\
 \begin{equation}\label{eq:alpha-divergence}
   \Dd_{\alpha}(p \| q ) = \frac{\int_{\bm{x}} \alpha p(\bm{x}) + (1-\alpha) q (\bm{x}) - p(\bm{x})^{\alpha} q(\bm{x})^{1-\alpha} d\bm{x}}{\alpha(1-\alpha)},
 \end{equation}
@@ -242,7 +242,7 @@ We use the notation $m_{k\rightarrow i}(x_i)$ to denote the factor as a function
 
 \subsubsection{Local $\alpha$-Divergence Minimization}
 
-Now, we are going to use the heuristic scheme as in \autoref{eq:fixed-point-iter} to minimize the information loss by using tractable $q(\bm{x})$ to represent $p(\bm{x})$. The informaiton loss is measured by $\alpha$-divergence $\Dd_{\alpha}(p(\bm{x}) \| q(\bm{x}))$.
+Now, we are going to use the heuristic scheme as in \autoref{eq:fixed-point-iter} to minimize the information loss by using tractable $q(\bm{x})$ to represent $p(\bm{x})$. The information loss is measured by $\alpha$-divergence $\Dd_{\alpha}(p(\bm{x}) \| q(\bm{x}))$.
 
 We do factor-wise refinement to update the factors of $q(\bm{x})$ such that $q(\bm{x})$ approaches $p(\bm{x})$ asymptotically similar to \cite{divergence-measures-and-message-passing,Minka:2001:EPA:647235.720257}. Without losing generality, we begin to refine factor $\tilde{t}_k(x_i, x_j)$. Define $q^{\backslash k}(\bm{x})$ as all other factors except for $\tilde{t}_k(x_i, x_j)$
 \begin{equation}
@@ -313,7 +313,7 @@ which is the belief from factor $f_i(x_i)$ to variable $x_i$. Note, if we initia
   \end{centering}
 \end{figure}
 
-As discussed in \autoref{sec:preliminary}, $KL(p\|q)$ is the special case of $\Dd_{\alpha}(p\|q)$ when $\alpha \rightarrow 1$. When applying $\alpha=1$ to \autoref{eq:message-rule}, it gives
+As discussed in Section~\ref{sec:preliminary}, $KL(p\|q)$ is the special case of $\Dd_{\alpha}(p\|q)$ when $\alpha \rightarrow 1$. When applying $\alpha=1$ to \autoref{eq:message-rule}, it gives
 \begin{equation}
   {m}^{\text{new}}_{k\rightarrow i}(x_i) \propto \sum_{x_j} t_k(x_i, x_j) m_{j \rightarrow k}(x_j),
 \end{equation}
@@ -342,9 +342,9 @@ We summarize the method into the pseudo-code in Algorithm~\autoref{alg:alphaBP}.
 \end{algorithm}
 
 \section{Experimental Results}
-In this section, we report numerical results on the $\alpha$-BP. It is well known that performance of BP and its variants deteriorate significantly when loops appear in factor graph. We would like to see if $\alpha$-BP could relief the deterioration brought by loops in inference. Thus we firstly test the performance of $\alpha$-BP for MAP inference in a Markov random field (MRF) with $\Aa=\{-1,1\}$ (Ising model), where we adjust how loopy its corresponding factor graph is.
+In this section, we report numerical results on the $\alpha$-BP. It is well known that performance of BP and its variants deteriorate significantly when loops appear in factor graph. We would like to see if $\alpha$-BP could relief the deterioration brought by loops in inference. Thus we firstly test the performance of $\alpha$-BP for MAP inference in a MRF with $\Aa=\{-1,1\}$ (Ising model), where we adjust how loopy its corresponding factor graph is.
 
-In addition, we apply the $\alpha$-BP to a MIMO detection problem, to explore its performance in comparison with (loopy) BP and MMSE. At the end, the prior factor trick is used according to discussion in \autoref{subsec:remark}. This turns out to be MAP inference problem as well.
+In addition, we apply the $\alpha$-BP to a MIMO detection problem, to explore its performance in comparison with (loopy) BP and minimum mean square error (MMSE). At the end, the prior factor trick is used according to discussion in Subsection~\ref{subsec:remark}. This turns out to be MAP inference problem as well.
 
 For the MAP inference, the most probable estimation by $\alpha$-BP, $\hat{\bm{x}}=[\hat{x}_1, \cdots, \hat{x}_N]$, is obtained by
 \begin{align}
@@ -412,7 +412,7 @@ We test the application of $\alpha$-BP to the MIMO signal detection numerically.
 \autoref{fig:mimo_a} shows that BP even underperforms MMSE but $\alpha$-BP can outperform MMSE by assigning smaller value of $\alpha$.
 Note that MMSE requires the matrix inverse computation whose complexity is proportional to $N^3$, while the complexity of $\alpha$-BP increases linearly with $N$. Therefore $\alpha$-BP is superior to MMSE both performance-wise and complexity-wise.  
 %$\alpha$-BP does not have this problem and still can outperform MMSE. 
-However, there is still a big gap between $\alpha$-BP (even for $\alpha=0.4$) and MAP. This gap can be decreased further by using the prior trick discussed in \autoref{subsec:remark}. \autoref{fig:mimo_b} exemplifies this effects by using prior belief from MMSE, $\hat{p}_i(x_i)\propto \exp\{-(x_i-\mu_i)^2/(2\bm{\Sigma}_{i,i})\}$, which comes with legend "$\alpha$-BP$+$MMSE". It is shown that larger performance gain is observed when $\alpha$-BP runs with prior belief.
+However, there is still a big gap between $\alpha$-BP (even for $\alpha=0.4$) and MAP. This gap can be decreased further by using the prior trick discussed in Subsection~\ref{subsec:remark}. \autoref{fig:mimo_b} exemplifies this effects by using prior belief from MMSE, $\hat{p}_i(x_i)\propto \exp\{-(x_i-\mu_i)^2/(2\bm{\Sigma}_{i,i})\}$, which comes with legend "$\alpha$-BP$+$MMSE". It is shown that larger performance gain is observed when $\alpha$-BP runs with prior belief.
 
 \section{Conclusion}
 In this work, we obtain the $\alpha$-BP method by doing local $\alpha$-divergence minimization between model distribution $p$ and surrogate distribution $q$. $\alpha$-BP is a practical Bayesian method for message passing. $\alpha$-BP is a valid and practical algorithm accoinding to our experiments. With prior trick, the performance of $\alpha$-BP can be further improved. Future works would be to investigate the parallel message passing scheduling of $\alpha$-BP. It is also interesting to study guideline on choice of $\alpha$.
