--- a/myref.bib
+++ b/myref.bib
@@ -976,4 +976,34 @@ url = {http://papers.nips.cc/paper/5760-stochastic-expectation-propagation.pdf}
  acmid = {1121911},
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
-} 
+}
+@INPROCEEDINGS{jeon2015optimality, 
+author={C. {Jeon} and R. {Ghods} and A. {Maleki} and C. {Studer}}, 
+booktitle={2015 IEEE International Symposium on Information Theory (ISIT)}, 
+title={Optimality of large MIMO detection via approximate message passing}, 
+year={2015}, 
+volume={}, 
+number={}, 
+pages={1227-1231}, 
+keywords={message passing;MIMO communication;multiuser detection;large MIMO detection;approximate message passing;multiple-input multiple-output communication systems;wireless link;computational complexity;sub-optimal detection algorithms;novel data-detection method;AMP;Noise;MIMO;Phase shift keying;Message passing;Algorithm design and analysis;Compressed sensing;Quadrature amplitude modulation}, 
+doi={10.1109/ISIT.2015.7282651}, 
+ISSN={2157-8117}, 
+month={June},}
+@article{Pretti2005damping,
+        doi = {10.1088/1742-5468/2005/11/p11008},
+        url = {https://doi.org/10.1088%2F1742-5468%2F2005%2F11%2Fp11008},
+        year = 2005,
+        month = {nov},
+        publisher = {{IOP} Publishing},
+        volume = {2005},
+        number = {11},
+        pages = {P11008--P11008},
+        author = {Marco Pretti},
+        title = {A message-passing algorithm with damping},
+        journal = {Journal of Statistical Mechanics: Theory and Experiment},
+        abstract = {We propose a modified belief propagation algorithm, with over-relaxed dynamics. Such an
+algorithm turns out to be generally more stable and faster than ordinary belief
+propagation. We characterize the performance of the algorithm, employed as a tool for
+combinatorial optimization, on the random satisfiability problem. Moreover, we trace a
+connection with a recently proposed double-loop algorithm for minimizing Bethe and
+Kikuchi free energies.}
