--- a/myref.bib
+++ b/myref.bib
@@ -1007,3 +1007,15 @@ propagation. We characterize the performance of the algorithm, employed as a too
 combinatorial optimization, on the random satisfiability problem. Moreover, we trace a
 connection with a recently proposed double-loop algorithm for minimizing Bethe and
 Kikuchi free energies.}
+@ARTICLE{roosta2008reweighed_sum_product,
+author={T. G. {Roosta} and M. J. {Wainwright} and S. S. {Sastry}},
+journal={IEEE Transactions on Signal Processing},
+title={Convergence Analysis of Reweighted Sum-Product Algorithms},
+year={2008},
+volume={56},
+number={9},
+pages={4293-4305},
+keywords={convergence;graph theory;Markov processes;signal processing;reweighted sum-product algorithm;signal processing;approximate marginalization;graph-dependent weight;geometric convergence rate;approximate message-passing algorithms;Markov random fields;Convergence;Algorithm design and analysis;Sum product algorithm;Signal processing algorithms;Markov random fields;Signal design;Random variables;Smoothing methods;Noise reduction;Stability;Approximate marginalization;belief propagation;convergence analysis;graphical models;Markov random fields;sum-product algorithm},
+doi={10.1109/TSP.2008.924136},
+ISSN={1053-587X},
+month={Sep.},}
